updating the details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I will be a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Streets</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Making money</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To not have a Job</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orange County</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's interesting. Technology is the future
+        and I want to be apart of it
+      </p>
     </section>
 
     <footer id="footer">
